Devops/kubernetes/pods/ingress/preschool.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preschool-deploy
spec:
  minReadySeconds: 3
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: preschool
  template:
    metadata:
      labels: 
        app: preschool
        version: v1.0
    spec:
      containers:
        - name: preschool
          image: kumar1502/preschool:1.0
          ports:
            - containerPort: 80
              protocol: "TCP"

---
apiVersion: v1
kind: Service
metadata:
  name: preschool-svc
spec: 
  selector:
    app: preschool
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
